# fib_api

./: README.md  pyproject.toml
app/: main.py
tests/: test_main.py
